--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
+
     "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "noEmitOnError": false,
+    "strict": false,
+    "allowJs": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
@@ -11,7 +13,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,
+    "incremental": true,    
     "plugins": [
       {
         "name": "next"
